--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/public/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfolio de Rafael Miranda">
   <meta name="author" content="Rafael Miranda">
   <meta name="robots" content="index, follow" />
-  <meta name="keywords" content="Rafael Miranda, desenvolvedor front-end, React, TypeScript, portfólio, web developer, front-end developer" />
+  <meta name="keywords" content="Rafael Miranda, modelo, especialista em estética, oferece acomodações."/>
 
   <title>Rafael Miranda</title>
 </head>
